9-pkg-old/blender-2.79-git/0-OLDS/00-Erreur-Compile-memcpy.TXT
[ 15%] Building CXX object intern/cycles/util/CMakeFiles/cycles_util.dir/util_murmurhash.cpp.o
/build/blender-git/src/blender/intern/cycles/util/util_murmurhash.cpp: In function ‘float ccl::util_hash_to_float(uint32_t)’:
/build/blender-git/src/blender/intern/cycles/util/util_murmurhash.cpp:121:2: error: ‘memcpy’ was not declared in this scope
  memcpy(&f, &float_bits, sizeof(uint32_t));
  ^~~~~~

/build/blender-git/src/blender/intern/cycles/util/util_murmurhash.cpp:121:2: note: ‘memcpy’ is defined in header ‘<cstring>’; did you forget to ‘#include <cstring>’?
/build/blender-git/src/blender/intern/cycles/util/util_murmurhash.cpp:26:1:
+#include <cstring>
 
/build/blender-git/src/blender/intern/cycles/util/util_murmurhash.cpp:121:2:
  memcpy(&f, &float_bits, sizeof(uint32_t));
  ^~~~~~
make[2]: *** [intern/cycles/util/CMakeFiles/cycles_util.dir/build.make:141: intern/cycles/util/CMakeFiles/cycles_util.dir/util_murmurhash.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1756: intern/cycles/util/CMakeFiles/cycles_util.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
